# ChangeLog for dev-python/pyorbit
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.22 2006/02/03 19:02:24 gmsoft Exp $

  03 Feb 2006; Guy Martin <gmsoft@gentoo.org> pyorbit-2.0.1.ebuild:
  Stable on hppa.

  23 Aug 2005; Aron Griffis <agriffis@gentoo.org> pyorbit-2.0.1.ebuild:
  stable on ia64

  01 Aug 2005; Simon Stelling <blubb@gentoo.org> pyorbit-2.0.1.ebuild:
  stable on amd64

  26 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> pyorbit-2.0.1.ebuild:
  Stable on alpha.

  18 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> pyorbit-2.0.1.ebuild:
  Stable on sparc

  17 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org>
  pyorbit-2.0.1.ebuild:
  ppc stable

  16 Jul 2005; John N. Laliberte <allanonjl@gentoo.org>
  pyorbit-2.0.1.ebuild:
  marking 2.0.1 stable on x86

*pyorbit-2.0.1 (23 Nov 2004)

  23 Nov 2004; Alastair Tse <liquidx@gentoo.org> +pyorbit-2.0.1.ebuild:
  version bump, moving CORBA.py and PortableServer.py to avoid colliding with
  omniorbpy

  23 Mar 2004; Chris Aniszczyk <zx@gentoo.org> pyorbit-2.0.0.ebuild:
  Added ~hppa

  09 Jan 2004; <gustavoz@gentoo.org> pyorbit-2.0.0.ebuild:
  marked stable on sparc

  09 Jan 2004; Aron Griffis <agriffis@gentoo.org> pyorbit-2.0.0.ebuild:
  stable on alpha

  24 Oct 2003; Alastair Tse <liquidx@gentoo.org> pyorbit-1.99.5.ebuild,
  pyorbit-1.99.6.ebuild, pyorbit-1.99.7.ebuild, pyorbit-2.0.0.ebuild:
  cleanup and bump to x86 stable

  24 Sep 2003; Todd Sunderlin <todd@gentoo.org> pyorbit-2.0.0.ebuild:
  added ~sparc keyword

  17 Sep 2003; Aron Griffis <agriffis@gentoo.org> pyorbit-2.0.0.ebuild:
  Add ~alpha

*pyorbit-2.0.0 (03 Sep 2003)

  03 Sep 2003; Alastair Tse <liquidx@gentoo.org> pyorbit-2.0.0.ebuild:
  version bump

*pyorbit-1.99.7 (29 Aug 2003)

  29 Aug 2003; foser <foser@gentoo.org> pyorbit-1.99.7.ebuild :
  New version

*pyorbit-1.99.6 (31 Jul 2003)
