@@ -1,6 +1,28 @@
-MD5 f4ee511d03dbbc5c9c530dad61374dfc ChangeLog 2446
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 446a21cd91869fa3d685a94493138cca ChangeLog 2566
+RMD160 a06279074b70cbe6312d3b182f5b5073d4eabcb4 ChangeLog 2566
+SHA256 696d6daa6073e5b2c6d1fd031f209f05e8d6892f6d4700dfad6956ac48625ba8 ChangeLog 2566
 MD5 9d3297219d639bea2af5b40eac57dd24 files/digest-pyorbit-2.0.0 66
+RMD160 889d11c7f50ac0c886c067b547551ce176b46e0f files/digest-pyorbit-2.0.0 66
+SHA256 81d318cb8eb7cc78395f3eb43f9712353fc422ebcbebe7fb8b3a36428e17cd49 files/digest-pyorbit-2.0.0 66
 MD5 e95549f9bb22fc658bfede9a5690dd2a files/digest-pyorbit-2.0.1 66
+RMD160 3f9918a689408e075a9df4dc91f324fe1f71bf68 files/digest-pyorbit-2.0.1 66
+SHA256 97234daecfac24b49ef1fed8a6c88a8284771a029ac5a481425d6df9d699c8a5 files/digest-pyorbit-2.0.1 66
 MD5 7f4b1ac767214657b085c4951227af02 metadata.xml 178
-MD5 298bd2018001959da4c10fbdae381be0 pyorbit-2.0.0.ebuild 614
-MD5 bdd14307fa9a2e779911417c5d3ec2fb pyorbit-2.0.1.ebuild 1166
+RMD160 52828e1ca616ad731f2ab1ed2890d6d3a7cc8043 metadata.xml 178
+SHA256 aeea09173ed30175422e4f951e369e1882919be3d56e655468e5d4bffea0fc3c metadata.xml 178
+MD5 db209c61b381163a37a5691cf7a078f6 pyorbit-2.0.0.ebuild 597
+RMD160 b5e01ac936561ac946c8074c5f04260397aca05b pyorbit-2.0.0.ebuild 597
+SHA256 14cf58decf41b2dc9da3392e4b93f136237e71a8c0420df2568e3da6cb3b8282 pyorbit-2.0.0.ebuild 597
+MD5 2bd78318a8e2537a618d8badcd643cdb pyorbit-2.0.1.ebuild 1153
+RMD160 478da4dcc6cbf584469720d4a02ac6db384ba452 pyorbit-2.0.1.ebuild 1153
+SHA256 a868ea0a516cf71a184386c56a57122a981bda3a279a0c367230d1c300eb35d4 pyorbit-2.0.1.ebuild 1153
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2.1 (GNU/Linux)
+
+iD8DBQFECVvs2jLqHNfbg2URAnUVAJ0bR8XSg5P1qN1R9IBZHYz42IByBwCeMEmN
+wTAqc8ZeSpvlUsTP8wqThS8=
+=nYDb
+-----END PGP SIGNATURE-----
