@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/pyorbit
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.22 2006/02/03 19:02:24 gmsoft Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyorbit/ChangeLog,v 1.23 2006/03/04 09:20:28 lucass Exp $
+
+  04 Mar 2006; Lukasz Strzygowski <lucass@gentoo.org> pyorbit-2.0.0.ebuild,
+  pyorbit-2.0.1.ebuild:
+  Fixed HOMEPAGEs.
 
   03 Feb 2006; Guy Martin <gmsoft@gentoo.org> pyorbit-2.0.1.ebuild:
   Stable on hppa.
